# python-banner

./: .gitignore  LICENSE  Makefile  README.md  banner.py  pyproject.toml
python_banner/: banner.py
util/: distro.py
