[tool.poetry]
name = "python-banner"
version = "0.1.0"
description = "Simple banner showing OS info"
authors = ["Kevin Meredith <kevin@meredithkm.info>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6"
distro = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
python-banner = 'python_banner.banner:main'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
